# chat

./: .gitignore  Cargo.toml  flake.nix
src/: client.rs  codec.rs  lib.rs  main.rs  server.rs
tests/: chat.rs  join.rs  stress.rs
tests/common/: mod.rs
