[package]
name = "chat"
version = "0.1.0"
edition = "2018"

[dependencies]
ahash = "0.7.2"
anyhow = "1.0.40"
futures = "0.3.14"
structopt = "0.3.21"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.6", features = ["codec"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.18", features = ["chrono"] }

[profile.release]
lto = "fat"
codegen-units = 1
